--- a/typo3/sysext/rtehtmlarea/Resources/Public/Css/Skin/htmlarea.css
+++ b/typo3/sysext/rtehtmlarea/Resources/Public/Css/Skin/htmlarea.css
@@ -30,6 +30,14 @@
 	margin-left: -5px;
 	padding: 2px 2px 2px 0;
 }
+.htmlarea .btn-toolbar:before,
+.htmlarea .btn-toolbar:after {
+	content: " ";
+	display: table;
+}
+.htmlarea .btn-toolbar:after {
+	clear: both;
+}
 .htmlarea .btn-toolbar .btn-group {
 	margin: 1px 3px;
 }
